name:                prelude-kai
version:             0.1.0.0
synopsis:            Improved Prelude
description:         Please see README.md
homepage:            http://github.com/fumieval/prelude-kai
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright © 2015 Fumiaki Kinoshita
category:            Prelude
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prelude.Kai
  build-depends:       base >= 4.8 && < 5, base-orphans, semigroups
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/prelude-kai